--- a/index.html
+++ b/index.html
@@ -17,41 +17,41 @@
         <a href="./page-2.html" class="links">News letter</a>
       </div>
     </nav>
-    <br />
+    <br/>
     <div class="container1">
       <div>
         <h1>Musical Roads</h1>
         <p>Some interesting information about musical roads and how they work</p>
         <a href="./page-2.html"><button class="button">Sign up</button></a>
       </div>
-      <div>
+      <figure>
         <img src="./images/header-image-1.jpg" alt="birds eye view of an intricate highway" height="175px" width="335px">
-      </div>
+      </figure>
     </div>
   </div>
   <h2 class="heading">The road works journey</h2>
   <div class="container2">
-    <div>
+    <figure>
       <img src="./images/road-work-1.jpg" alt="road design-engineers laying road">
       <p>Road Design - Engineers laying road</p>
-    </div>
-    <div>
+    </figure>
+    <figure>
       <img src="./images/road-work-2.jpg" alt="road design-engineers rolling tar">
       <p>Road Design - Engineers rolling tar</p>
-    </div>
-    <div>
+    </figure>
+    <figure>
       <img src="./images/musical-road-1.jpg" alt="road design-image of road sign">
       <p>Road Design - Image of a road sign</p>
-    </div>
-    <div>
+    </figure>
+    <figure>
       <img src="./images/musical-roads-2.jpg" alt="road design-image of road markings">
       <p>Road Design - Image of road markings</p>
     </div>
-  </div>
-  <div class="three">
+  </figure>
+  <blockquote class="three">
     <p class="quote"><i>“The road to success is always under construction.”</i></p>
     <p class="author"><i> ― Steve Maraboli, Life, the Truth, and Being Free</i></p>
-  </div>
+  </blockquote>
   <div class="action">
     <div>
       <h3>Join the community!</h3>
