--- a/page-1.html
+++ b/page-1.html
@@ -24,17 +24,17 @@
         <p>Some interesting information about musical roads and how they work</p>
         <a href="./page-2.html"><button class="button">Sign up</button></a>
       </div>
-      <div>
+      <figure>
         <img src="./images/header-image-1.jpg" alt="birds eye view of an intricate highway" height="175px" width="335px">
-      </div>
+      </figure>
     </div>
   </div>
   <div class="three">
-    <div class="img">
+    <figure class="img">
       <img src="./images/music-road-marking1.jpg" alt="Road markings for musicl roads" height="200" width="200">
       <img src="./images/the-musical-road-lancaster.jpg" alt="Musical road sign in Lancaster" height="200" width="200">
       <img src="./images/yellow-lines-rumble-strip.jpg" alt="Musical road rumble strips" height="200" width="200">
-    </div>
+    </figure>
     <h2>What exactly are musical roads?</h2>
     <article>
       <p>A musical road is a road, or section of a road, which when driven over causes a tactile vibration and audible
