--- a/page-2.html
+++ b/page-2.html
@@ -17,15 +17,15 @@
         <a href="./page-2.html" class="links">News letter</a>
       </div>
     </nav>
-    <br />
+    <br/>
     <div class="container1">
-      <div>
+      <header>
         <h1>Musical Roads</h1>
         <p>Some interesting information about musical roads and how they work</p>
-      </div>
-      <div>
+      </header>
+      <figure>
         <img src="./images/header-image-1.jpg" alt="birds eye view of an intricate highway" height="175px" width="335px">
-      </div>
+      </figure>
     </div>
   </div>
   <div class="four">
