--- a/index.html
+++ b/index.html
@@ -29,24 +29,24 @@
       </figure>
     </div>
   </div>
-  <h2 class="heading">The road works journey</h2>
+   <h2 class="heading">The road works journey</h2>
   <div class="container2">
-    <figure>
-      <img src="./images/road-work-1.jpg" alt="road design-engineers laying road">
-     </figure>
+    <div>
+      <figure><img src="./images/road-work-1.jpg" alt="road design-engineers laying road"></figure>
       <p>Road Design - Engineers laying road</p>
-    <figure>
-      <img src="./images/road-work-2.jpg" alt="road design-engineers rolling tar">
-    </figure>  
+    </div>
+    <div>
+      <figure><img src="./images/road-work-2.jpg" alt="road design-engineers rolling tar"></figure>
       <p>Road Design - Engineers rolling tar</p>
-    <figure>
-      <img src="./images/musical-road-1.jpg" alt="road design-image of road sign">
-    </figure>
+    </div>
+    <div>
+      <figure><img src="./images/musical-road-1.jpg" alt="road design-image of road sign"></figure>
       <p>Road Design - Image of a road sign</p>
-    <figure>
-      <img src="./images/musical-roads-2.jpg" alt="road design-image of road markings">
-     </figure>
-     <p>Road Design - Image of road markings</p>
+    </div>
+    <div>
+      <figure><img src="./images/musical-roads-2.jpg" alt="road design-image of road markings"></figure>
+      <p>Road Design - Image of road markings</p>
+    </div>
   </div>
   <blockquote class="three">
     <p class="quote"><i>“The road to success is always under construction.”</i></p>
