--- a/index.html
+++ b/index.html
@@ -48,10 +48,12 @@
       <p>Road Design - Image of road markings</p>
     </div>
   </div>
-  <blockquote class="three">
+  <div class="three">
+   <blockquote>
     <p class="quote"><i>“The road to success is always under construction.”</i></p>
     <p class="author"><i> ― Steve Maraboli, Life, the Truth, and Being Free</i></p>
-  </blockquote>
+   </blockquote>
+  </div>
   <div class="action">
     <div>
       <h3>Join the community!</h3>
