--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <h2 class="heading">The road works journey</h2>
   <div class="container2">
     <div>
-      <img src="./images/road-work-1.jpg" alt="road design-engineers laying road">
+      <figure><img src="./images/road-work-1.jpg" alt="road design-engineers laying road"></figure>
       <p>Road Design - Engineers laying road</p>
     </div>
     <div>
