--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <a href="./page-2.html"><button class="button">Sign up</button></a>
       </div>
       <div>
-        <img src="./images/header-image-1.jpg" alt="birds eye view of an intricate highway" height="175px" width="335px">
+        <figure><img src="./images/header-image-1.jpg" alt="birds eye view of an intricate highway" height="175px" width="335px"></figure>
       </div>
     </div>
   </div>
@@ -36,15 +36,15 @@
       <p>Road Design - Engineers laying road</p>
     </div>
     <div>
-      <img src="./images/road-work-2.jpg" alt="road design-engineers rolling tar">
+      <figure><img src="./images/road-work-2.jpg" alt="road design-engineers rolling tar"></figure>
       <p>Road Design - Engineers rolling tar</p>
     </div>
     <div>
-      <img src="./images/musical-road-1.jpg" alt="road design-image of road sign">
+      <figure><img src="./images/musical-road-1.jpg" alt="road design-image of road sign"></figure>
       <p>Road Design - Image of a road sign</p>
     </div>
     <div>
-      <img src="./images/musical-roads-2.jpg" alt="road design-image of road markings">
+      <figure><img src="./images/musical-roads-2.jpg" alt="road design-image of road markings"></figure>
       <p>Road Design - Image of road markings</p>
     </div>
   </div>
