--- a/page-2.html
+++ b/page-2.html
@@ -24,7 +24,7 @@
         <p>Some interesting information about musical roads and how they work</p>
       </div>
       <div>
-        <img src="./images/header-image-1.jpg" alt="birds eye view of an intricate highway" height="175px" width="335px">
+        <figure><img src="./images/header-image-1.jpg" alt="birds eye view of an intricate highway" height="175px" width="335px"></figure>
       </div>
     </div>
   </div>
