--- a/page-1.html
+++ b/page-1.html
@@ -25,15 +25,15 @@
         <a href="./page-2.html"><button class="button">Sign up</button></a>
       </div>
       <div>
-        <img src="./images/header-image-1.jpg" alt="birds eye view of an intricate highway" height="175px" width="335px">
+        <figure><img src="./images/header-image-1.jpg" alt="birds eye view of an intricate highway" height="175px" width="335px"></figure>
       </div>
     </div>
   </div>
   <div class="three">
     <div class="img">
-      <img src="./images/music-road-marking1.jpg" alt="Road markings for musicl roads" height="200" width="200">
-      <img src="./images/the-musical-road-lancaster.jpg" alt="Musical road sign in Lancaster" height="200" width="200">
-      <img src="./images/yellow-lines-rumble-strip.jpg" alt="Musical road rumble strips" height="200" width="200">
+      <figure><img src="./images/music-road-marking1.jpg" alt="Road markings for musicl roads" height="200" width="200"></figure>
+      <figure><img src="./images/the-musical-road-lancaster.jpg" alt="Musical road sign in Lancaster" height="200" width="200"></figure>
+      <figure><img src="./images/yellow-lines-rumble-strip.jpg" alt="Musical road rumble strips" height="200" width="200"></figure>
     </div>
     <h2>What exactly are musical roads?</h2>
     <article>
