--- a/index.html
+++ b/index.html
@@ -49,8 +49,10 @@
     </div>
   </div>
   <div class="three">
-    <p class="quote"><i>“The road to success is always under construction.”</i></p>
-    <p class="author"><i> ― Steve Maraboli, Life, the Truth, and Being Free</i></p>
+    <blockquote>
+       <p class="quote"><i>“The road to success is always under construction.”</i></p>
+       <p class="author"><i> ― Steve Maraboli, Life, the Truth, and Being Free</i></p>
+    </blockquote>
   </div>
   <div class="action">
     <div>
